[package]
name = "cita_ng_consensus"
version = "0.1.0"
authors = ["rink1969 <rink1969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.6.2"
cita_ng_proto = { git = "https://github.com/citahub/cita_ng_proto.git", branch = "master" }
env_logger = "0.7.1"
log = "0.4.8"
proof_of_sleep = { git = "https://github.com/citahub/proof_of_sleep.git", branch = "master" }
clap = "2"
toml = "0.5.5"
serde = "1"
serde_derive = "1"
protobuf = "2.8.2"
futures = "0.1"
parking_lot = "0.10.0"
crossbeam-channel = "0.4.0"
blake2b_simd = "0.5.10"

[dev-dependencies]
tempfile = "3"